Memperbarui href pada Footer

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 
     <!-- Footer -->
     <footer class="bg-primary text-white pb-2 text-center">
-      <p>Dibuat oleh <a href="#" class="text-white fw-bold">AdmSakti</a> <i class="bi bi-hand-thumbs-up text-dark"></i></p>
+      <p>Dibuat oleh <a href="https://github.com/admsakti" class="text-white fw-bold">AdmSakti</a> <i class="bi bi-hand-thumbs-up text-dark"></i></p>
     </footer>
     <!-- End Footer -->
 
